changes of video to only static website

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   type="text/javascript"></script>
   <div id="root"></div>
   <script type="module" src="index.jsx"></script>
+  <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.480/build/spline-viewer.js"></script>
 </body>
 
 </html>
